package SGG.Visitor;

public abstract class Person {
    public abstract void accept(Action action);
}
